--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,12 @@
-sentence-transformers
-langchain-huggingface
+fastapi
 uvicorn
+pydantic
+langchain
+langchain-community
+langchain-google-genai
+langchain-huggingface
+sentence-transformers
+faiss-cpu
+python-dotenv
+requests
+beautifulsoup4
