--- a/data/appointments.json
+++ b/data/appointments.json
@@ -59,5 +59,21 @@
         "service": "Botox",
         "date": "Tue, Jan 27, 2026, 4:00 PM",
         "created_at": "2026-01-27T16:00:53.394286"
+    },
+    {
+        "name": "lakshya",
+        "phone": "7879230515",
+        "email": "lakshya@123",
+        "service": "asdwd",
+        "date": "Tue, Feb 24, 2026, 12:37 PM",
+        "created_at": "2026-02-03T12:37:59.509599"
+    },
+    {
+        "name": "lakshya",
+        "phone": "7879230515",
+        "email": "lakshya",
+        "service": "alww",
+        "date": "Fri, Feb 20, 2026, 12:40 PM",
+        "created_at": "2026-02-03T12:40:08.959356"
     }
 ]
