--- a/data/appointments.json
+++ b/data/appointments.json
@@ -83,5 +83,14 @@
         "email": "lakshyaqwq",
         "date": "Thu, Feb 12, 2026, 10:52 AM",
         "created_at": "2026-02-04T10:52:46.793993"
+    },
+    {
+        "name": "lakshya",
+        "phone": "68686",
+        "email": "kajdw",
+        "service": "botoc",
+        "date": "Tue, Feb 17, 2026, 10:23 AM",
+        "created_at": "2026-02-16T17:23:59.108018",
+        "ip_address": "127.0.0.1"
     }
 ]
